# contextender

./: .pre-commit-config.yaml  README.md  pyproject.toml
src/contextender/: __init__.py  _config.py  _prompts.py  contextend.py  contextend_by_mode.py  contextend_llm_request.py  contextending_llm_request.py  summarizer.py  utils.py
src/contextender/item_chooser/: _prompts.py  item_chooser.py
src/contextender/list_item_chooser/: item_chooser.py
src/contextender/list_item_choser/: item_chooser.py
src/contextender/summarizer/: _prompts.py  summarizer.py
src/contextender/text_item_chooser/: item_chooser.py
tests/: test_item_chooser.py  test_list_item_chooser.py  test_summarizer.py  test_text_item_chooser.py  test_utils.py
